--- a/web-src/examples/focus-dynamic-interval.html
+++ b/web-src/examples/focus-dynamic-interval.html
@@ -19,118 +19,144 @@
       <script type="text/javascript" src="../js/crossfilter.js"></script>
       <script type="text/javascript" src="../js/dc.js"></script>
       <script type="text/javascript">
-        {
-          class MyLineChart extends dc.LineChart {
-            yAxisMin() {
-              const min = d3.min(this.data(), layer =>
-                d3.min(layer.values, p => p.y + p.y0)
-              );
-              return dc.utils.subtract(min, this.yAxisPadding());
-            }
-          }
-
-          const data = [];
-          const items = 500000; // way way too much
-
-          const start = Date.now();
-          for (let i = 0; i < items; i++) {
-            const t = start + i * 50;
-            const d = new Date(t);
-            data.push({
-              value: 10 * Math.sin((2 * Math.PI * t) / (60 * 60 * 1000)),
-              date: d,
-            });
-          }
-
-          const chart = new MyLineChart('#chart');
-          const rangeChart = new dc.LineChart('#range-chart');
-          const fullDomain = [data[0].date, data.slice(-1)[0].date];
-          const dimension = crossfilter(data).dimension(d => d.date);
-          const groupsByMinInterval = [
-            {
-              name: 'minutes',
-              threshold: 60 * 60 * 1000,
-              interval: d3.timeMinute,
-            },
-            {
-              name: 'seconds',
-              threshold: 60 * 1000,
-              interval: d3.timeSecond,
-            },
-            {
-              name: 'milliseconds',
-              threshold: 0,
-              interval: d3.timeMillisecond,
-            },
-          ];
-
-          function makeGroup(interval) {
-            return dimension.group(interval).reduce(
-              (p, v) => {
-                p.count++;
-                p.total += v.value;
-                return p;
-              },
-              (p, v) => {
-                p.count--;
-                p.total += v.value;
-                return p;
-              },
-              () => ({ count: 0, total: 0 })
+        class MyLineChart extends dc.LineChart {
+          yAxisMin() {
+            const min = d3.min(this.data(), layer =>
+              d3.min(layer.values, p => p.y + p.y0)
             );
+            return dc.subtract(min, this.conf().yAxisPadding);
           }
-
-          function chooseGroup(extent) {
-            const d = extent[1].getTime() - extent[0].getTime();
-            const found = groupsByMinInterval.find(mg => mg.threshold < d);
-            console.log(
-              `interval ${d} is more than ${found.threshold} ms; choosing ${
-                found.name
-              } for ${found.interval.range(extent[0], extent[1]).length} points`
-            );
-            if (!found.group) {
-              found.group = makeGroup(found.interval);
-            }
-            return found.group;
-          }
-
-          chart
-            .width(800)
-            .height(300)
-            .dimension(dimension)
-            .group(chooseGroup(fullDomain))
-            .yAxisPadding(0.1)
-            .valueAccessor(kv => kv.value.total / kv.value.count)
-            .rangeChart(rangeChart)
-            .x(d3.scaleTime().domain(fullDomain))
-            .xUnits(d3.timeDay)
-            .brushOn(false)
-            .mouseZoomable(true)
-            .zoomScale([1, 100])
-            .zoomOutRestrict(true)
-            .renderVerticalGridLines(true)
-            .elasticY(true)
-            .transitionDuration(100);
-
-          rangeChart
-            .width(800)
-            .height(100)
-            .dimension(dimension)
-            .group(groupsByMinInterval[0].group)
-            .yAxisPadding(1)
-            .valueAccessor(kv => kv.value.total / kv.value.count)
-            .x(d3.scaleTime().domain(fullDomain))
-            .xUnits(d3.timeDay);
-
-          rangeChart.on('filtered.dynamic-interval', (_, filter) => {
-            chart.group(chooseGroup(filter || fullDomain));
-          });
-
-          chart.yAxis().tickFormat(t => t.toFixed(0));
-          rangeChart.yAxis().tickFormat(t => '');
-          rangeChart.yAxis().ticks(0);
-          dc.renderAll();
         }
+
+        const data = [];
+        const items = 500000; // way way too much
+
+        const start = Date.now();
+        for (let i = 0; i < items; i++) {
+          const t = start + i * 50;
+          const d = new Date(t);
+          data.push({
+            value: 10 * Math.sin((2 * Math.PI * t) / (60 * 60 * 1000)),
+            date: d,
+          });
+        }
+
+        const chartGroup = new dc.ChartGroup();
+
+        const chart = new MyLineChart('#chart', chartGroup);
+        const rangeChart = new dc.LineChart('#range-chart', chartGroup);
+        const fullDomain = [data[0].date, data.slice(-1)[0].date];
+        const dimension = crossfilter(data).dimension(d => d.date);
+        const groupsByMinInterval = [
+          {
+            name: 'minutes',
+            threshold: 60 * 60 * 1000,
+            interval: d3.timeMinute,
+          },
+          {
+            name: 'seconds',
+            threshold: 60 * 1000,
+            interval: d3.timeSecond,
+          },
+          {
+            name: 'milliseconds',
+            threshold: 0,
+            interval: d3.timeMillisecond,
+          },
+        ];
+
+        function makeGroup(interval) {
+          return dimension.group(interval).reduce(
+            (p, v) => {
+              p.count++;
+              p.total += v.value;
+              return p;
+            },
+            (p, v) => {
+              p.count--;
+              p.total += v.value;
+              return p;
+            },
+            () => ({ count: 0, total: 0 })
+          );
+        }
+
+        function chooseGroup(extent) {
+          const d = extent[1].getTime() - extent[0].getTime();
+          const found = groupsByMinInterval.find(mg => mg.threshold < d);
+          console.log(
+            `interval ${d} is more than ${found.threshold} ms; choosing ${
+              found.name
+            } for ${found.interval.range(extent[0], extent[1]).length} points`
+          );
+          if (!found.group) {
+            found.group = makeGroup(found.interval);
+          }
+          return found.group;
+        }
+
+        chart
+          .dataProvider(
+            new dc.CFMultiAdapter({
+              dimension: dimension,
+              valueAccessor: kv => kv.value.total / kv.value.count,
+              layers: [
+                {
+                  group: chooseGroup(fullDomain),
+                },
+              ],
+            })
+          )
+          .configure({
+            yAxisPadding: 0.1,
+            xUnits: d3.timeDay,
+            brushOn: false,
+            mouseZoomable: true,
+            zoomScale: [1, 100],
+            zoomOutRestrict: true,
+            renderVerticalGridLines: true,
+            elasticY: true,
+            transitionDuration: 100,
+            autoFocus: true,
+          })
+          .width(800)
+          .height(300)
+          .x(d3.scaleTime().domain(fullDomain));
+
+        rangeChart
+          .dataProvider(
+            new dc.CFMultiAdapter({
+              dimension: dimension,
+              valueAccessor: kv => kv.value.total / kv.value.count,
+              layers: [
+                {
+                  group: groupsByMinInterval[0].group,
+                },
+              ],
+            })
+          )
+          .configure({
+            yAxisPadding: 1,
+            xUnits: d3.timeDay,
+          })
+          .width(800)
+          .height(100)
+          .x(d3.scaleTime().domain(fullDomain));
+
+        rangeChart.on('filtered.dynamic-interval', (_, filter) => {
+          chart.dataProvider().configure({
+            layers: [
+              {
+                group: chooseGroup(filter || fullDomain),
+              },
+            ],
+          });
+        });
+
+        chart.yAxis().tickFormat(t => t.toFixed(0));
+        rangeChart.yAxis().tickFormat(t => '');
+        rangeChart.yAxis().ticks(0);
+        chartGroup.renderAll();
       </script>
     </div>
   </body>
