--- a/web-src/examples/multi-focus.html
+++ b/web-src/examples/multi-focus.html
@@ -20,10 +20,7 @@
       <script type="text/javascript" src="../js/crossfilter.js"></script>
       <script type="text/javascript" src="../js/dc.js"></script>
       <script type="text/javascript">
-        const chart1 = new dc.BarChart('#test1');
-        const chart2 = new dc.BarChart('#test2');
-        const chart3 = new dc.BarChart('#test3');
-        const chart4 = new dc.BarChart('#test4');
+        const chartGroup = new dc.ChartGroup();
 
         d3.csv('morley.csv').then(experiments => {
           experiments.forEach(x => {
@@ -36,26 +33,44 @@
               .group()
               .reduceSum(d => (d.Speed * d.Run) / 1000);
 
-          function barChart(chart) {
-            chart
+          // eslint-disable-next-line no-unused-vars
+          const [chart1, chart2, chart3, chart4] = [
+            '#test1',
+            '#test2',
+            '#test3',
+            '#test4',
+          ].map(anchor =>
+            new dc.BarChart(anchor, chartGroup)
+              .dataProvider(
+                new dc.CFMultiAdapter({
+                  dimension: runDimension,
+                  layers: [
+                    {
+                      group: speedSumGroup,
+                    },
+                  ],
+                })
+              )
+              .configure({
+                brushOn: false,
+                autoFocus: true,
+                mouseZoomable: true,
+                zoomOutRestrict: true,
+              })
               .width(400)
               .height(300)
               .x(d3.scaleLinear().domain([6, 20]))
-              .brushOn(false)
               .yAxisLabel('This is the Y Axis!')
-              .dimension(runDimension)
-              .configure({ autoFocus: true })
-              .group(speedSumGroup);
-            return chart;
-          }
+          );
 
-          barChart(chart1).brushOn(true).configure({ autoFocus: false });
+          chart1.configure({
+            autoFocus: false,
+            brushOn: true,
+            mouseZoomable: false,
+            zoomOutRestrict: false,
+          });
 
-          barChart(chart2);
-          barChart(chart3);
-          barChart(chart4);
-
-          dc.renderAll();
+          chartGroup.renderAll();
         });
       </script>
     </div>
