--- a/web-src/examples/range-series.html
+++ b/web-src/examples/range-series.html
@@ -23,10 +23,11 @@
       <script type="text/javascript" src="../js/crossfilter.js"></script>
       <script type="text/javascript" src="../js/dc.js"></script>
       <script type="text/javascript">
+        const chartGroup = new dc.ChartGroup();
         dc.constants.EVENT_DELAY = 0;
 
-        const focusChart = new dc.SeriesChart('#test');
-        const overviewChart = new dc.SeriesChart('#test-overview');
+        const focusChart = new dc.SeriesChart('#test', chartGroup);
+        const overviewChart = new dc.SeriesChart('#test-overview', chartGroup);
         let ndx, runDimension, runGroup;
 
         d3.csv('morley.csv').then(experiments => {
@@ -35,30 +36,36 @@
           runGroup = runDimension.group().reduceSum(d => +d.Speed);
 
           focusChart
+            .dataProvider(
+              new dc.CFSimpleAdapter({
+                dimension: runDimension,
+                group: runGroup,
+                valueAccessor: d => +d.value - 500,
+              })
+            )
+            .configure({
+              transitionDuration: 0,
+              brushOn: false,
+              autoFocus: true,
+              yAxisPadding: '5%',
+              elasticY: true,
+              mouseZoomable: true,
+              seriesAccessor: d => `Expt: ${d.key[0]}`,
+              keyAccessor: d => +d.key[1],
+              chartFunction: c =>
+                new dc.LineChart(c, chartGroup)
+                  .configure({
+                    evadeDomainFilter: true,
+                  })
+                  .curve(d3.curveCardinal),
+            })
             .width(768)
             .height(480)
-            .transitionDuration(0)
-            .chart(c =>
-              new dc.LineChart(c)
-                .curve(d3.curveCardinal)
-                .evadeDomainFilter(true)
-            )
             .x(d3.scaleLinear().domain([0, 20]))
-            .brushOn(false)
             .yAxisLabel('Measured Speed km/s')
-            .yAxisPadding('5%')
             .xAxisLabel('Run')
-            .elasticY(true)
-            .dimension(runDimension)
-            .group(runGroup)
-            .mouseZoomable(true)
-            .rangeChart(overviewChart)
-            .seriesAccessor(d => `Expt: ${d.key[0]}`)
-            .keyAccessor(d => +d.key[1])
-            .valueAccessor(d => +d.value - 500)
             .legend(
-              dc
-                .legend()
+              new dc.Legend()
                 .x(350)
                 .y(350)
                 .itemHeight(13)
@@ -71,21 +78,28 @@
           focusChart.margins().left += 40;
 
           overviewChart
+            .dataProvider(
+              new dc.CFSimpleAdapter({
+                dimension: runDimension,
+                group: runGroup,
+                valueAccessor: d => +d.value - 500,
+              })
+            )
+            .configure({
+              transitionDuration: 0,
+              chartFunction: c =>
+                new dc.LineChart(c, chartGroup).curve(d3.curveCardinal),
+              brushOn: true,
+              clipPadding: 10,
+              seriesAccessor: d => `Expt: ${d.key[0]}`,
+              keyAccessor: d => +d.key[1],
+            })
             .width(768)
             .height(100)
-            .transitionDuration(0)
-            .chart(c => new dc.LineChart(c).curve(d3.curveCardinal))
             .x(d3.scaleLinear().domain([0, 20]))
-            .brushOn(true)
-            .xAxisLabel('Run')
-            .clipPadding(10)
-            .dimension(runDimension)
-            .group(runGroup)
-            .seriesAccessor(d => `Expt: ${d.key[0]}`)
-            .keyAccessor(d => +d.key[1])
-            .valueAccessor(d => +d.value - 500);
+            .xAxisLabel('Run');
 
-          dc.renderAll();
+          chartGroup.renderAll();
         });
       </script>
     </div>
